examples/manual/failing/OrphanTypeDecl.purs
module OrphanTypeDecl where

fn :: Number -> Boolean
